# cmake_demo

demo1/: CMakeLists.txt  main.cpp
demo2/: CMakeLists.txt  DemoConfig.h.in  build.sh  demo.sh  main.cpp  main2  main2.cpp
demo2/MathFunctions/: CMakeLists.txt
demo2/src/: CMakeLists.txt  Test.cpp
